<resources>
    <string name="app_name">GlobantChallenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flag">Flag</string>
    <string name="capital">Capital -</string>
    <string name="region">Region -</string>
    <string name="subregion">Subregion -</string>
    <string name="languages">Languages -</string>
    <string name="currencies">Currencies -</string>
    <string name="population">Population -</string>
    <string name="carside">CarSide -</string>
    <string name="coat_of_arms">Coat of Arms</string>
</resources>