<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.detail.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSurface"
            android:gravity="center"
            app:contentInsetStartWithNavigation="0dp">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="12dp">

            <ImageView
                android:id="@+id/imageFlag"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:contentDescription="@string/flag"
                android:scaleType="fitStart" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/tvCommonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvOfficialName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/textCapital"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capital"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCapital"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/textRegion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/region"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRegion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="18.sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/textSubregion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subregion"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSubregion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/textLanguages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/languages"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLanguages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/textCurrencies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currencies"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCurrencies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/textPopulation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/population"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPopulation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/textCarSide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carside"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCarSide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textCoatOfArms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/coat_of_arms"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageCoatOfArms"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/coat_of_arms"
                android:scaleType="fitStart" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>